<resources>
    <string name="app_name">Memory Game</string>
    <string name="txt_welcome">Welcome!</string>
    <string name="txt_name_request">Please enter your name\n(max 10 letters):</string>
    <string name="txt_age_request">Please enter your age\n(max 3 digits):</string>
    <string name="btn_submit">Submit</string>
    <string name="btn_easy">Easy</string>
    <string name="btn_medium">Medium</string>
    <string name="btn_hard">Hard</string>
    <string name="game_win">Game Over - You Won\n\nThe Force Is With You!</string>
    <string name="game_lose">Game Over - You Lost\n\nWelcome To The Dark Side!</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="enter_your_age">Enter Your Age</string>
    <string name="remaining_time">seconds remaining:</string>
    <string name="score_txt">Score: </string>
    <string name="title_activity_high_scores">HighScoresActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="high_scores">High Scores</string>
    <string name="intent_name">NAME</string>
    <string name="intent_age">AGE</string>
    <string name="intent_rows">ROWS</string>
    <string name="intent_cols">COLS</string>
    <string name="intent_time">TIME</string>
    <string name="tab_table">TABLE</string>
    <string name="tab_map">MAP</string>
    <string name="title_activity_maps">Map</string>
    <string name="create_table">CREATE TABLE</string>
    <string name="primary_key_incorrect">ID INTEGER PRIMARY KEY AUTOINCREMENT</string>
    <string name="drop_table">DROP IF TABLE EXISTS</string>
    <string name="sql_text">TEXT</string>
    <string name="sql_real">REAL</string>
    <string name="sql_float">FLOAT</string>
    <string name="sql_integer">INTEGER</string>
    <string name="sql_select">SELECT</string>
    <string name="sql_from">FROM</string>
    <string name="sql_where">WHERE</string>
    <string name="sql_astrix">*</string>
    <string name="sql_order_by">ORDER BY</string>
    <string name="sql_decent">DESC</string>
    <string name="sql_limit">LIMIT</string>
    <string name="highest_scores">Highest Scores</string>
    <string name="user_name">User Name</string>
    <string name="user_score">User Score</string>
    <string name="user_location">Location</string>
    <string name="card_return">Movement leads to confusion</string>
</resources>
