<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background_style"
    tools:context="com.example.exoli.myapplication.MainActivity">


    <TextView
        style="@style/text_style"
        android:id="@+id/txtWelcome"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="72dp"
        android:text="@string/txt_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/text_style"
        android:id="@+id/txtName"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="148dp"
        android:text="@string/txt_name_request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtWelcome"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        style="@style/editText_style"
        android:id="@+id/edtName"
        android:hint="@string/enter_your_name"
        android:inputType="text"
        android:maxLength="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtWelcome"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <EditText
        style="@style/editText_style"
        android:id="@+id/edtAge"
        android:hint="@string/enter_your_age"
        android:inputType="number"
        android:maxLength="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtWelcome"
        app:layout_constraintTop_toBottomOf="@+id/txtAge" />

    <TextView
        style="@style/text_style"
        android:id="@+id/txtAge"
        android:layout_marginEnd="52dp"
        android:layout_marginTop="24dp"
        android:text="@string/txt_age_request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtWelcome"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />

    <Button
        android:id="@+id/btnSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/btn_submit"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtAge"
        app:layout_constraintVertical_bias="0.25" />



</android.support.constraint.ConstraintLayout>
