<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/background_style"
    tools:context="com.example.exoli.myapplication.activities.DifficultyActivity">


    <TextView
        style="@style/text_style"
        android:id="@+id/txt1"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.113"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            style="@style/diff_btn_style"
            android:id="@+id/btnEasy"
            android:text="@string/btn_easy"
            tools:layout_editor_absoluteX="82dp"
            tools:layout_editor_absoluteY="389dp" />

        <Button
            style="@style/diff_btn_style"
            android:id="@+id/btnMedium"
            android:text="@string/btn_medium"
            tools:layout_editor_absoluteX="248dp"
            tools:layout_editor_absoluteY="216dp" />

        <Button
            style="@style/diff_btn_style"
            android:id="@+id/btnHard"
            android:text="@string/btn_hard"
            tools:layout_editor_absoluteX="248dp"
            tools:layout_editor_absoluteY="292dp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>